# risk-controlled-vlm-evidence-platform

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  EXPERIMENT_HANDOFF.md  Makefile  README.md  RELEASE_NOTES.md  RUN_LEARNED_RISK_ROUTING.ps1  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
constraints/: qualification-py313-linux.txt
docs/: ARCHITECTURE.md  DATA_CARD.md  LEARNED_ROUTING_EXPERIMENT.md  improvement_report.md  known_limitations.md  operations.md  release_qualification.md  troubleshooting.md
outputs/adapters/: docvqa.json  funsd.json  kleister.json
reports/final_run/: README.md  SHA256SUMS.txt  baseline_metrics.json  candidate_metrics.json  experiment_config.json  feature_schema.json  model_card.md  per_group_metrics.json  promotion_gate.json  public_evidence_summary.json
scripts/: build_operational_manifests.py  build_qualification_manifest.py  build_release_candidate_handoff.py  build_release_manifest.py  create_release_zip.py  full_pipeline_validation.py  generate_readme_visuals.py  normalize_sdist.py  qualify_local.ps1  qualify_local.py  qualify_local.sh  qualify_runtime.py  repository_integrity.py
tests/: test_api.py  test_archive_adapters.py  test_cli.py  test_decision.py  test_document_vlm.py  test_learned_routing.py  test_mutation_properties.py  test_pipeline_integration.py  test_provenance.py  test_publication.py  test_qwen_contract.py  test_readme_visuals.py  test_release_tooling.py  test_review_qualification.py  test_risk_gate_exact.py  test_schema_integrity.py  test_synthetic_pipeline.py  test_validation_harness.py  test_workflows.py
(+15 files in other folders)
