[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-controlled-vlm-evidence-platform"
version = "0.7.1"
description = "Reliability-first evidence assessment, transactional publication, review-policy qualification, and bounded API serving"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{name = "Jinwoo Bae"}]
dependencies = [
  "pydantic>=2.8,<3",
  "numpy>=2.0,<3",
  "PyMuPDF>=1.24,<2",
]

[project.optional-dependencies]
api = ["fastapi>=0.137,<1", "uvicorn>=0.30,<1", "httpx2>=2.4,<3"]
api-legacy = ["fastapi>=0.115,<0.129", "uvicorn>=0.30,<1", "httpx>=0.27,<1"]
dev = ["pytest>=8,<10", "pytest-cov>=5,<8", "ruff>=0.9,<1", "mypy>=1.13,<3", "build>=1.2,<2", "setuptools>=75", "wheel>=0.44", "scikit-learn==1.8.0"]
vlm = ["torch>=2.5", "transformers>=4.57", "pillow>=10"]
datasets = ["py7zr>=1,<2", "pyarrow>=18,<24"]
ml = ["scikit-learn==1.8.0"]

[project.scripts]
control-evidence = "control_evidence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
no_error_summary = true
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
